--- a/Web/Areas/Hub/Views/Dispatch/CreateDispatch.cshtml
+++ b/Web/Areas/Hub/Views/Dispatch/CreateDispatch.cshtml
@@ -4,6 +4,7 @@
 @using Kendo.Mvc.UI
 @using Telerik.Web.Mvc.UI
 @using GridEditMode = Kendo.Mvc.UI.GridEditMode
+@using System.Web.Helpers;
 @{
     ViewBag.Title = Html.Translate("New/Edit Dispatch");
     Layout = "~/Views/Shared/_MainLayoutWide.cshtml";
