--- a/Web/Areas/Hub/Views/Home/Index.cshtml
+++ b/Web/Areas/Hub/Views/Home/Index.cshtml
@@ -64,8 +64,8 @@
                     <div class="portlet">
                         <div class="portlet-header">
                             <h3>
-                                <i class=""></i>
-                                Stock Status per commodity(in MT)
+                                <i class="cats-unit-pref">  Stock Status per commodity</i>
+                              
                             </h3>
 
                             <ul class="portlet-tools pull-right">
