--- a/Web/Areas/Logistics/Views/FDPSIAllocation/Index.cshtml
+++ b/Web/Areas/Logistics/Views/FDPSIAllocation/Index.cshtml
@@ -801,7 +801,7 @@
                             if (   $scope.SIPCCodes[si].allocatedRequests[i].Allocations[0].Code === fdpID)//temp.Allocations[0].Code
                             {
 
-                               
+                                alert("FDP Allocated From This SI" );
                                 return 1;
                         }
                         }
