--- a/Web/Areas/EarlyWarning/Views/Request/NewIdps.cshtml
+++ b/Web/Areas/EarlyWarning/Views/Request/NewIdps.cshtml
@@ -5,10 +5,14 @@
 
 @{
     ViewBag.Title = "Creat";
-    Layout = "~/Views/Shared/_CATSLayout.cshtml";
+
+    Layout = "~/Views/Shared/NewTheme _MainLayout.cshtml";
+    // Layout = "~/Views/Shared/_CATSLayout.cshtml";
+    ViewBag.PageTitle = "New Fast on Set Request";
+    ViewBag.PageTitleDescription = "";
 }
 
-@section Title
+@*@section Title
 {
 Requistions
 }
@@ -16,16 +20,24 @@ Requistions
 {
      <h1 class="hdr-blck big ">  New Fast on Set Request</h1>
    
-}
+}*@
 
 <div class="row">
     @section LeftBar
 {
-    @Html.Partial("_RegionalRequestLeftBar")
-}
-    <div class="col-md-10  col-sm-9">
-        <div class=" box box-primary ">
-            @using (Html.BeginForm("NewIdps", "Request", FormMethod.Post, new {id = "frm_create_request"}))
+        @Html.Partial("_RegionalRequestLeftBar")
+    }
+    
+    <div class="portlet light bordered" style="display: block;">
+        <div class="portlet-title">
+            <div class="caption font-green-sharp">
+                <i class="fa fa-inbox font-green-sharp"></i>
+                <span class="caption-subject bold uppercase"> New IDPS </span>
+                <span class="caption-helper">  </span>
+            </div>
+        </div>
+        <div>
+            @using (Html.BeginForm("NewIdps", "Request", FormMethod.Post, new { id = "frm_create_request" }))
             {
 
                 <div class="box-body row">
@@ -35,7 +47,7 @@ Requistions
                                 @Html.LabelFor(model => model.ProgramID, "Program")
                             </div>
                             <div class="col-sm-8">
-                                @Html.TextBox("Program", "IDPS", new {disabled = true, @class = "form-control"})
+                                @Html.TextBox("Program", "IDPS", new { disabled = true, @class = "form-control" })
                                 @Html.ValidationMessageFor(model => model.ProgramID)
                             </div>
                         </div>
@@ -44,7 +56,7 @@ Requistions
                                 @Html.LabelFor(model => model.RegionID, "Region")
                             </div>
                             <div class="col-sm-8">
-                                @Html.DropDownList("RegionID", null, String.Empty, new {@class = "form-control"})
+                                @Html.DropDownList("RegionID", null, String.Empty, new { @class = "form-control" })
                                 @Html.ValidationMessageFor(model => model.RegionID)
                             </div>
                         </div>
@@ -55,7 +67,7 @@ Requistions
                                 @Html.Label("IDPS Reason")
                             </div>
                             <div class="col-sm-8">
-                                @Html.DropDownList("ReasonType", ViewBag.IDPSReasonType as SelectList, new {@class = "form-control"})
+                                @Html.DropDownList("ReasonType", ViewBag.IDPSReasonType as SelectList, new { @class = "form-control" })
 
                             </div>
                         </div>
@@ -64,7 +76,7 @@ Requistions
                                 @Html.LabelFor(model => model.RationID, Html.Translate("Ration"))
                             </div>
                             <div class="col-sm-8">
-                                @Html.DropDownList("RationID", null, String.Empty, new {@class = "form-control"})
+                                @Html.DropDownList("RationID", null, String.Empty, new { @class = "form-control" })
                                 @Html.ValidationMessageFor(model => model.RationID)
                             </div>
                         </div>
