CATS-1285 has been modified

--- a/Web/Areas/EarlyWarning/Views/Request/NewIdps.cshtml
+++ b/Web/Areas/EarlyWarning/Views/Request/NewIdps.cshtml
@@ -41,7 +41,7 @@ Requistions
                                 @Html.LabelFor(model => model.RegionID, "Region")
                             </div>
                             <div class="col-sm-8">
-                                @Html.DropDownList("RegionID", null, String.Empty, new { @class = "form-control" })
+                                @Html.DropDownList("RegionID", ViewBag.RegionId as SelectList, new { @class = "form-control" })
                                 @Html.ValidationMessageFor(model => model.RegionID)
                             </div>
                         </div>
