--- a/Web/Areas/EarlyWarning/Views/Home/Index.cshtml
+++ b/Web/Areas/EarlyWarning/Views/Home/Index.cshtml
@@ -257,18 +257,13 @@
                             <div class="form-group">
                                 <label for="selround">Filter By Round:</label>
                                 <select class="form-control" id="selround" ng-model="search.Round">
-                                    <option>1</option>
-                                    <option>2</option>
-                                    <option>3</option>
-                                    <option>4</option>
-                                    <option>5</option>
-                                    <option>6</option>
-                                    <option>7</option>
-                                    <option>8</option>
-                                    <option>9</option>
-                                    <option>10</option>
-                                    <option>11</option>
-                                    <option>12</option>
+                                    @{
+                                        var rounds = ViewBag.Rounds;
+                                        foreach (var round in rounds)
+                                        {
+                                            <option>@round</option>
+                                        }
+                                    }                                  
                                 </select>
                             </div>
                             </form>
